@@ -4,6 +4,10 @@ This  changelog file  describes  the  differences between  each  Sonic XA  build
 available  in  this directory.  Changes  are  always  relative to  the  previous
 version.
 
+* Latest
+
+- Prevent situations where TOC wouldn't be loaded correctly
+
 * SAGE 2025 Build: v0.5.1 (2025-08-05)
 
 - Fix a  bug where  the player  would remain  on air  if restarting  level while
